# cookiecutter-python

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml
